--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-     <title>Title Case</title>
+     <title>Get Even</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/nav.css">
   <link rel="stylesheet" href="css/forms.css">
   <style>
-    #output{
+    #container{
       border-radius: 5px;
       min-height: 40px;
       border:1px solid lightskyblue;
@@ -28,12 +28,12 @@
  <body>
      <header>
 
-  <h1 class="page-header">Title Case</h1>
+  <h1 class="page-header">Get Even</h1>
    <main class="wrapper">
 
     <h2 class="subheader">Place form code below:</h2>
-    <div id="output"></div>
-    <form method="post" action="" class="main-form">
+    <div id="output">
+    <form method="get" action="" class="main-form">
       <div>
         <label for="input">Input</label><br>
         <input type="text" name="input" id="input" placeholder="Input" required autofocus>  
@@ -54,24 +54,30 @@
   <script src="js/main.js"></script> 
   <script>
 
-    function titleCase(str){
-      return str.charAt(0).toUpperCase() + str.slice(1).toLowerCase();
-    }
+const queryString = window.location.search;
+let myOutput = '<div id="container">';//will store data for display
+const urlParams = new URLSearchParams(queryString);
 
 
-    const mySubmit = document.querySelector("#submit");
-    console.log(mySubmit);
-    
-    mySubmit.addEventListener("click",function(ev){
-      ev.preventDefault();
-      const myInput = document.querySelector("#input");
-      const myOutput = document.querySelector("#output");
-      let myString = myInput.value;
-      myString = titleCase(myString);
-      myOutput.innerHTML = titleCase(myInput.value);
+if(queryString.length > 0){//form submitted!
+     let myOutput = `<div id="container">`;//will store data for display
+       //alert("Data submitted!");
+       if(urlParams.has("input")){
+           //alert(urlParams.get("input"));
 
-      //alert(myInput.value);
-    });
+
+           let myInput = urlParams.get("input");
+
+
+
+
+           myOutput += `<p>You input ${myInput}</p>`;
+       }
+       myOutput += `<p><a href="index.html">CLEAR</a></p>`; 
+     myOutput += `</div>`;
+   
+     document.querySelector("#output").innerHTML = myOutput;
+   }
 
   </script>  
  </body>
